Update tailwind - attempt to fix navmenu overflow
The navigationlinks got cropped after adding a extra link. Hopefully this change will let them be displayed correctly again.

--- a/website/css/tailwind.css
+++ b/website/css/tailwind.css
@@ -160,7 +160,7 @@ input:-webkit-autofill:focus {
 
 .content-header-link {
   opacity: 0;
-  margin-left: -24px;
+  margin-left: -10px;
   padding-right: 4px;
 }
 
